HTML all test passed. Avance renderItems y DOM

--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,11 @@
     </h2>
 
     <div id="root">
-      <ul>
-          <!-- Los hijos de <li> usan atributos de microdata itemscope e itemprop.
+      <!--<ul>
+          Los hijos de <li> usan atributos de microdata itemscope e itemprop.
            - ¿los atributos de microdata habría que ponerlos desde HTML o JS?
-           - cómo agregar atributos de microdata desde createElement en javascript -->
-      </ul>
+           - cómo agregar atributos de microdata desde createElement en javascript
+      </ul> -->
     </div>  
     </main>
     <footer>
