deshabilitar líneas en select

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
       <h2 class="control-bar">
         <label for="order">Ordenar por:</label>
         <select id="order" data-testid="select-sort" name="alphabetic">
-          <option value="">---</option>      
+          <option value="" disabled>---</option>      
           <option value="asc">A - Z</option>
           <option value="desc">Z - A</option>
         </select>
       
         <label for="filter">Filtrar por:</label>
         <select id="filter" data-testid="select-filter" name="conservation-status">      
-          <option value="">---</option>
+          <option value="" disabled>---</option>
           <option value="preocupacion-menor">Preocupación menor</option>
           <option value="casi-amenazado">Casi amenazado</option>
           <option value="vulnerable">Vulnerable</option>
