diseño de estadísticas, inmobilizar títulos, arreglo de fuente y jv creación del cuadro de estadísticas

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <header>
-      <h1>AVES DE LATINOAMÉRICA</h1>
+      <h1 id="titlePrincipal">AVES DE LATINOAMÉRICA</h1>
     </header>
 
     <main>
@@ -31,11 +31,14 @@
           <option value="vulnerable">Vulnerable</option>
         </select>
      <!--   <input type="text" name="Search" id="search" placeholder="Buscar Ave..."> -->
-        <button id="statistics">Estadísticas</button>
-        <dialog id="statisticsWindos">
-          <h1> Estadisticas </h1>
-          <p> </p>
-          <button id="statisticsClose"> Cerrar </button>
+        <button id="buttonStatistics">Estadísticas</button>
+        <!--<dialog open id="statisticsWindos"> la ventana modal se abre desde el inicio--> 
+          <dialog id="statisticsWindowOpen">
+          <h1 id="titleStatistics"> Estadísticas </h1>
+          <section class="contentStatistics">
+            <canvas id="myChart"></canvas>
+           </section>
+          <button id="statisticsWindowClose"> X </button>
         </dialog>
         <button id="reset-button" title="Limpiar">Limpiar</button>
       </h2>
@@ -52,6 +55,7 @@
     <footer>
       <p>Developed by Daisy C. H.,  Milen P. G.</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js" integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="main.js" type="module"></script>
   </body>
 </html>
